# openbuild

./: .gitignore  Cargo.toml  README.md  SPEC.md
bundled/: manifest.json
bundled/agents/: explore.md  general.md  plan.md
bundled/personas/: implementer.toml  researcher.toml  reviewer.toml
bundled/roles/: explore.toml  implementer.toml  plan.toml
bundled/skills/check/: SKILL.md
crates/openbuild-agents/: Cargo.toml
crates/openbuild-agents/src/: lib.rs
crates/openbuild-cli/: Cargo.toml
crates/openbuild-cli/src/: main.rs
crates/openbuild-config/: Cargo.toml
crates/openbuild-config/src/: import.rs  lib.rs
crates/openbuild-core/: Cargo.toml
crates/openbuild-core/src/: event.rs  lib.rs  loop_.rs  message.rs  provider.rs  request.rs  tool.rs
crates/openbuild-hooks/: Cargo.toml
crates/openbuild-hooks/src/: lib.rs
crates/openbuild-mcp/: Cargo.toml
crates/openbuild-mcp/src/: lib.rs
crates/openbuild-memory/: Cargo.toml
crates/openbuild-memory/src/: lib.rs
crates/openbuild-permissions/: Cargo.toml
crates/openbuild-permissions/src/: lib.rs
crates/openbuild-providers/: Cargo.toml
crates/openbuild-providers/src/: anthropic.rs  lib.rs  ollama.rs  openai.rs  sse.rs  xai.rs
crates/openbuild-sandbox/: Cargo.toml
crates/openbuild-sandbox/src/: lib.rs
crates/openbuild-session/: Cargo.toml
crates/openbuild-session/src/: lib.rs
crates/openbuild-skills/: Cargo.toml
crates/openbuild-skills/src/: lib.rs
crates/openbuild-tools/: Cargo.toml
crates/openbuild-tools/src/: bash.rs  edit_file.rs  glob.rs  grep.rs  lib.rs  list_dir.rs  multi_edit.rs  read_file.rs  run_terminal_cmd.rs  task.rs  web_fetch.rs  web_search.rs  write_file.rs
crates/openbuild-tui/: Cargo.toml
crates/openbuild-tui/src/: lib.rs
