[workspace]
resolver = "2"
members = [
    "crates/openbuild-cli",
    "crates/openbuild-core",
    "crates/openbuild-providers",
    "crates/openbuild-tools",
    "crates/openbuild-config",
    "crates/openbuild-permissions",
    "crates/openbuild-session",
    "crates/openbuild-skills",
    "crates/openbuild-mcp",
    "crates/openbuild-sandbox",
    "crates/openbuild-tui",
    "crates/openbuild-agents",
    "crates/openbuild-memory",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rohitg00/openbuild"
authors = ["Rohit Ghumare <ghumare64@gmail.com>"]
rust-version = "1.80"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex = "1"

openbuild-core = { path = "crates/openbuild-core", version = "0.0.1" }
openbuild-providers = { path = "crates/openbuild-providers", version = "0.0.1" }
openbuild-tools = { path = "crates/openbuild-tools", version = "0.0.1" }
openbuild-config = { path = "crates/openbuild-config", version = "0.0.1" }
openbuild-permissions = { path = "crates/openbuild-permissions", version = "0.0.1" }
openbuild-session = { path = "crates/openbuild-session", version = "0.0.1" }
openbuild-skills = { path = "crates/openbuild-skills", version = "0.0.1" }
openbuild-mcp = { path = "crates/openbuild-mcp", version = "0.0.1" }
openbuild-sandbox = { path = "crates/openbuild-sandbox", version = "0.0.1" }
openbuild-tui = { path = "crates/openbuild-tui", version = "0.0.1" }
openbuild-agents = { path = "crates/openbuild-agents", version = "0.0.1" }
openbuild-memory = { path = "crates/openbuild-memory", version = "0.0.1" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
