[package]
name = "openbuild-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Config + import (Claude, Cursor, Codex, OpenCode, Aider, generic AGENTS.md)"

[dependencies]
openbuild-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
