[package]
name = "openbuild-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Hooks system: PreToolUse, PostToolUse, Stop, SessionStart, SessionEnd, UserPromptSubmit, PreCompact, Notification"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "macros", "rt"] }
tracing.workspace = true
regex.workspace = true
dirs.workspace = true
