[package]
name = "openbuild-permissions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Permission rule engine — universal Tool(args) grammar"

[dependencies]
openbuild-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true
