[package]
name = "openbuild-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Provider adapters: OpenAI-compatible, Anthropic, Ollama, xAI, OpenRouter, Bedrock, Vertex"

[features]
default = ["openai", "anthropic", "ollama"]
openai = []
anthropic = []
ollama = []
openrouter = []
bedrock = []
vertex = []

[dependencies]
openbuild-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
url.workspace = true
async-stream = "0.3"
