[package]
name = "openbuild-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Sandbox — macOS seatbelt, Linux landlock+seccomp"

[dependencies]
openbuild-core.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
toml.workspace = true
dirs.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
which = "6"
