[package]
name = "openbuild-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Skill loader — SKILL.md, .cursorrules, AGENTS.md, generic markdown"

[dependencies]
openbuild-core.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
