[package]
name = "openbuild-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Builtin tools: read/write/edit/bash/grep/glob/list_dir/web_*"

[dependencies]
openbuild-core.workspace = true
openbuild-sandbox.workspace = true
tokio = { workspace = true }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
globset = "0.4"
ignore = "0.4"
