[package]
name = "openbuild-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Ratatui frontend (alt-screen + inline modes)"

[dependencies]
openbuild-core.workspace = true
tokio.workspace = true
anyhow.workspace = true
