[package]
name = "openbuild-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Ratatui frontend (alt-screen + inline modes)"

[dependencies]
openbuild-core.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync"] }
anyhow.workspace = true
async-trait.workspace = true
ratatui = "0.28"
crossterm = "0.28"
unicode-width = "0.2"
